@@ -21,6 +21,7 @@ lm_connection_get_server
 lm_connection_set_server
 lm_connection_get_port
 lm_connection_set_port
+lm_connection_supports_ssl
 lm_connection_get_use_ssl
 lm_connection_set_use_ssl
 lm_connection_send
