@@ -1,3 +1,12 @@
+2003-07-12  Mikael Hallendal  <micke@imendio.com>
+
+	* configure.in: 
+	- Added SSL support, patch from Bartosz Zapalowski. THIS GUY ROCKS!
+	* docs/reference/loudmouth-sections.txt: 
+	- added lm_connection_supports_ssl.
+	* loudmouth/lm-connection.c: Added support for SSL.
+	* loudmouth/test-lm.c: (main): Use SSL if it's compiled in.
+
 2003-07-07  Mikael Hallendal  <micke@imendio.com>
 
         * Release 0.10.1
